Added posibility to upload images for products